# ContentMetadataService

./: .gitignore  CMakeLists.txt  README.md
ContentMetadataApi/: CMakeLists.txt  ContentMetadataController.cpp  ContentMetadataController.h  HttpServer.cpp  HttpServer.hpp  StdAfx.hpp
ContentMetadataApi/DataTransferObjects/: ContentCommentDto.hpp  ContentDto.hpp  ContentsDto.hpp  ErrorsDto.hpp  GuidDto.hpp  LicenseRulesDto.hpp
ContentMetadataApi/HttpDataStructures/: HeaderKeys.hpp  HttpMethod.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpStatusCode.hpp
ContentMetadataApi/Mappers/: HttpDataMapper.cpp  HttpDataMapper.hpp  IHttpDataMapper.hpp
ContentMetadataApi/Mappers/EntityMappers/: ContentCommentDataMapper.cpp  ContentCommentDataMapper.hpp  ContentDataMapper.cpp  ContentDataMapper.hpp  IContentCommentDataMapper.hpp  IContentDataMapper.hpp  ILicenseRulesDataMapper.hpp  LicenseRulesDataMapper.cpp  LicenseRulesDataMapper.hpp
ContentMetadataApi/Parsers/: DateTimeParser.cpp  DateTimeParser.hpp  EndpointParser.cpp  EndpointParser.hpp  GuidParser.cpp  GuidParser.hpp  IDateTimeParser.hpp  IEndpointParser.hpp  IGuidParser.hpp
ContentMetadataApi/Routing/: CommandSelector.cpp  CommandSelector.hpp  ICommandSelector.hpp
ContentMetadataApi/Routing/Commands/: ICommand.hpp
ContentMetadataApi/Routing/Commands/ContentComments/: AddContentCommentCommand.cpp  AddContentCommentCommand.hpp  DeleteContentCommentCommand.cpp  DeleteContentCommentCommand.hpp
ContentMetadataApi/Routing/Commands/Contents/: AddContentCommand.cpp  AddContentCommand.hpp  DeleteContentCommand.cpp  DeleteContentCommand.hpp  GetContentByIdCommand.cpp  GetContentByIdCommand.hpp  GetContentsByOwnerIdCommand.cpp  GetContentsByOwnerIdCommand.hpp  GetContentsCommand.cpp  GetContentsCommand.hpp  UpdateContentCommand.cpp  UpdateContentCommand.hpp
ContentMetadataApi/Routing/Factories/: HttpCommandFactoriesFactory.cpp  HttpCommandFactoriesFactory.hpp  IHttpCommandFactoriesFactory.hpp  IHttpCommandFactory.hpp
ContentMetadataApi/Routing/Factories/ContentComments/: ContentCommentsCommandFactory.cpp  ContentCommentsCommandFactory.hpp
ContentMetadataApi/Routing/Factories/Contents/: ContentsCommandFactory.cpp  ContentsCommandFactory.hpp
ContentMetadataApi/Visitors/: IVisitable.hpp  IVisitor.hpp  TypeTraits.hpp
ContentMetadataApi/Visitors/Factories/: IVisitorFactory.hpp  VisitorFactory.cpp  VisitorFactory.hpp
ContentMetadataApi/Visitors/JsonSerialization/: JsonDeserializationVisitor.cpp  JsonDeserializationVisitor.hpp  JsonKeys.hpp  JsonSerializationVisitor.cpp  JsonSerializationVisitor.hpp
ContentMetadataApi/Visitors/Validator/: DataValidationVisitor.cpp  DataValidationVisitor.hpp
ContentMetadataCommon/: CMakeLists.txt
ContentMetadataCommon/Configuration/: Config.cpp  Config.hpp  IConfig.hpp
ContentMetadataCommon/DateTime/: DateTimeParser.cpp  DateTimeParser.hpp  IDateTimeParser.hpp
ContentMetadataCommon/Threads/: IThreadPoolManager.hpp  ThreadPoolManager.cpp  ThreadPoolManager.hpp
ContentMetadataCore/: Awaitable.h  CMakeLists.txt  ContentCommentsService.hpp  ContentMetadataCore.cpp  ContentsService.hpp  StdAfx.h  StdAfx.hpp
ContentMetadataCore/Entities/: Content.h  Content.hpp  ContentComment.h  ContentComment.hpp  LicenseRules.h  LicenseRules.hpp
ContentMetadataCore/Enums/: LicenseDuration.hpp  LicenseType.hpp
ContentMetadataCore/InternalContracts/: IContentCommentsContract.hpp  IContentsContract.cpp  IContentsContract.h  IContentsContract.hpp
ContentMetadataRepository/: CMakeLists.txt  ContentCommentsDatabaseService.cpp  ContentCommentsDatabaseService.hpp  ContentsDatabaseService.cpp  ContentsDatabaseService.hpp  StdAfx.hpp  main.cpp  main.h
ContentMetadataRepository/Constants/: DatabaseKeys.hpp
ContentMetadataRepository/Persistance/: IUnitOfWork.hpp  UnitOfWork.cpp  UnitOfWork.hpp
ContentMetadataRepository/Persistance/DatabaseSchema/: DatabaseSchemaInitializer.cpp  DatabaseSchemaInitializer.hpp
ContentMetadataRepository/Persistance/Repositories/: IRepositoryFactory.hpp  Repository.hpp  RepositoryFactory.cpp  RepositoryFactory.hpp
ContentMetadataRepository/Persistance/Repositories/ContentComments/: ContentCommentRepository.cpp  ContentCommentRepository.hpp  IContentCommentRepository.hpp
ContentMetadataRepository/Persistance/Repositories/Contents/: ContentRepository.cpp  ContentRepository.hpp  IContentRepository.hpp
ContentMetadataRepository/Persistance/Repositories/LicenseRules/: ILicenseRulesRepository.hpp  LicenseRulesRepository.cpp  (+1 more)
tests/: CMakeLists.txt
tests/CommonMocks/: DateTimeParserMock.hpp
tests/ContentMetadataApi_Tests/: CMakeLists.txt  DefaultUnitTests.cpp  DefaultUnitTests.hpp
tests/ContentMetadataApi_Tests/Mappers/: HttpDataMapper_Should.cpp  HttpDataMapper_Should.hpp
tests/ContentMetadataApi_Tests/Mocks/: ContentCommentContractMock.hpp  ContentCommentDataMapperMock.hpp  ContentContractMock.hpp  ContentDataMapperMock.hpp  DateTimeParserMock.hpp  EndpointParserMock.hpp  GuidParserMock.hpp  HttpCommandFactoriesFactoryMock.hpp  HttpCommandFactoryMock.hpp  VisitorFactoryMock.hpp  VisitorMock.hpp
tests/ContentMetadataApi_Tests/Parsers/: DateTimeParser_Should.cpp  DateTimeParser_Should.hpp  EndpointParser_Should.cpp  EndpointParser_Should.hpp  GuidParser_Should.cpp  GuidParser_Should.hpp
tests/ContentMetadataApi_Tests/Routing/: CommandSelector_Should.cpp  CommandSelector_Should.hpp
tests/ContentMetadataCommon_Tests/: CMakeLists.txt
tests/ContentMetadataCommon_Tests/DateTime/: DateTimeParser_Should.cpp  DateTimeParser_Should.hpp
tests/ContentMetadataRepository_Tests/: CMakeLists.txt  ContentCommentsDatabaseService_Should.cpp  ContentCommentsDatabaseService_Should.hpp  ContentsDatabaseService_Should.cpp  ContentsDatabaseService_Should.hpp
tests/ContentMetadataRepository_Tests/Mocks/: ContentCommentRepositoryMock.hpp  ContentRepositoryMock.hpp  LicenseRulesRepositoryMock.hpp  RepositoryFactoryMock.hpp  ThreadPoolManagerMock.hpp  UnitOfWorkMock.hpp
tests/ContentMetadataRepository_Tests/Persistance/: UnitOfWork_Should.cpp  UnitOfWork_Should.hpp
(+50 files in other folders)
